@@ -1,0 +1,265 @@
+<!DOCTYPE html>
+<head>
+<script type='application/ld+json'>
+{"@context": "https://schema.org", "@graph": [{"@type": "Article", "headline": "BTS\u6210\u54e1\u912d\u865f\u932b\u5b8c\u621018\u500b\u6708\u5175\u5f79\u3000\u7b11\u5bb9\u6eff\u9762\u63ee\u5225\u8ecd\u71df\u751f\u6d3b", "description": "BTS\u6210\u54e1\u912d\u865f\u932b\u5b8c\u621018\u500b\u6708\u5175\u5f79\u3000\u7b11\u5bb9\u6eff\u9762\u63ee\u5225\u8ecd\u71df\u751f\u6d3b", "url": "https://www.famechos.me/news/BTS\u6210\u54e1\u912d\u865f\u932b\u5b8c\u621018\u500b\u6708\u5175\u5f79\u3000\u7b11\u5bb9\u6eff\u9762\u63ee\u5225\u8ecd\u71df\u751f\u6d3b.html", "image": "https://www.famechos.me/images/banner.jpg", "datePublished": "2024-10-22T15:27:35.178859+08:00", "author": {"@type": "Person", "name": "Famechos"}, "publisher": {"@type": "Organization", "name": "Famechos", "url": "https://www.famechos.me"}}, {"@type": "Organization", "name": "Famechos", "url": "https://www.famechos.me", "logo": "https://www.famechos.me/icons/favicon.png"}, {"@type": "WebSite", "name": "Famechos", "url": "https://www.famechos.me"}]}
+</script>
+<link rel="canonical" href="https://www.famechos.me/news/BTS成員鄭號錫完成18個月兵役　笑容滿面揮別軍營生活.html"/>
+<meta name="description" content="BTS成員鄭號錫完成18個月兵役，笑容滿面揮別軍營生活。回顧鄭號錫的兵役生涯，並探討他對未來的展望。">
+
+<meta name="keywords" content="BTS, 鄭號錫, 兵役, 軍營生活, KPOP, 韓國偶像">
+
+<link rel="stylesheet" href="../main-nav.css">
+<link rel="stylesheet" href="../main-content.css">
+<link rel="stylesheet" href="../main-small.css">
+<link rel="stylesheet" href="../post.css">
+<link rel="stylesheet" href="../main-footer.css">
+<link rel="stylesheet" href="../news.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/earlyaccess/notosanstc.css">
+        <meta property="og:url" content="https://www.famechos.me/news/BTS成員鄭號錫完成18個月兵役　笑容滿面揮別軍營生活.html" />
+        <meta property="og:title" content="BTS成員鄭號錫完成18個月兵役　笑容滿面揮別軍營生活" />
+        <meta property="og:description" content="BTS成員鄭號錫完成18個月兵役　笑容滿面揮別軍營生活" />
+        <meta property="og:image" content="https://www.famechos.me/images/banner.jpg" />
+        <meta property="twitter:card" content="summary_large_image" />
+        <meta property="twitter:title" content="BTS成員鄭號錫完成18個月兵役　笑容滿面揮別軍營生活" />
+        <meta property="twitter:description" content="BTS成員鄭號錫完成18個月兵役　笑容滿面揮別軍營生活" />
+        <meta property="twitter:image" content="https://www.famechos.me/images/banner.jpg" />
+<meta name="theme-color" content="white">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta property="og:locale" content="zh_TW" />
+        <meta property="og:site_name" content="Famechos" />
+<meta property="og:type" content="article" />
+<meta name="robots" content="index, follow" />
+<meta name="author" content="Famechos" />
+        <meta name="referrer" content="origin">
+<meta name="apple-mobile-web-app-capable" content="yes"/>
+        <meta name="apple-mobile-web-app-status-bar-style" content="black"/>
+        <meta name="apple-mobile-web-app-title" content="Avoir"/>
+        <meta name="apple-touch-fullscreen" content="yes"/>
+        
+<style> * {box-sizing: border-box;margin: 0;padding: 0;font-family: 'Noto Sans TC', sans-serif;scroll-behavior: smooth;}</style>
+
+</head>
+
+<body>
+
+<nav class="nav">
+    <div class="nav-outerbox">
+      <div class="nav-inner-left">
+        <div class="nav-name-logo">
+          <a href="https://www.famechos.me/"><img class="famechos-logo" src="../img/famechos_logo.png"></a>
+         
+        </div>
+        <div class="nav-separate">
+          <p>|</p>
+        </div>
+        <div class="nav-type-1 nav-type"><a href="https://www.famechos.me/k-pop.html">
+          <button class="nav-type-btn1 nav-type-btn">
+          <h2 class="nav-type-text">K-POP</h2>
+        </button></a>
+ 
+        </div>
+        <div class="nav-type-2 nav-type"><a href="https://www.famechos.me/j-pop.html">
+          <button class="nav-type-btn2 nav-type-btn">
+          <h2 class="nav-type-text">J-POP</h2>
+        </button></a>
+ 
+        </div>
+        <div class="nav-type-3 nav-type"><a href="https://www.famechos.me/drama.html">
+          <button class="nav-type-btn3 nav-type-btn">
+          <h2 class="nav-type-text">影視</h2>
+        </button></a>
+         
+        </div>
+        <div class="nav-type-4 nav-type"><a href="https://www.famechos.me/others.html">
+          <button class="nav-type-btn4 nav-type-btn">
+          <h2 class="nav-type-text">其他</h2>
+        </button></a>
+        </div>  
+      </div>
+      <div class="nav-inner-right">
+        <div class="nav-feedback-outer"><a href="https://www.famechos.me/about_us.html">
+          <button class="feedback-btn nav-type-btn">
+            <h2 class="nav-type-text">關於我們</h2>
+          </button></a>
+        </div>
+        <div class="nav-setting"><a href="https://www.famechos.me/privacy_policy.html">
+          <button class="setting-btn nav-type-btn">
+            <h2 class="nav-type-text">私隱條款</h2>
+          </button></a>
+        </div>
+        <div class="nav-list">
+          <button id="list-btn" class="list-btn nav-type-btn">
+            <i class="bi bi-list"></i>
+          </button>
+        </div>
+
+      </div>
+
+      <div id="list" class="nav-list-outer">
+        <div class="nav-type-1 nav-type list-type"><a href="https://www.famechos.me/k-pop.html">
+          <button class="list-type-btn">
+          <p>K-POP</p>
+          </button></a>
+        </div>
+
+        <div class="nav-type-2 nav-type list-type"><a href="https://www.famechos.me/j-pop.html">
+          <button class="list-type-btn">
+          <p>J-POP</p>
+          </button></a>
+        </div>
+
+        <div class="nav-type-3 nav-type list-type"><a href="https://www.famechos.me/drama.html">
+          <button class="list-type-btn">
+          <p>影視</p>
+          </button></a>
+        </div>
+
+        <div class="nav-type-4 nav-type list-type"><a href="https://www.famechos.me/others.html">
+          <button class="list-type-btn">
+          <p>其他</p>
+          </button></a>
+        </div>
+
+        <div class="nav-type-5 nav-type list-type"><a href="https://www.famechos.me/about_us.html">
+          <button class="list-type-btn">
+          <p>關於我們</p>
+          </button></a>
+        </div>
+
+        <div class="nav-type-6 nav-type list-type"><a href="https://www.famechos.me/privacy_policy.html">
+          <button class="list-type-btn">
+          <p>私隱條款</p>
+          </button></a>
+
+        </div>  
+
+      </div>
+     
+    </div>
+  </nav>
+
+
+  <main>
+    <div class="news-main-outer">
+      <div class="news-title-outer">
+        <h1>BTS成員鄭號錫完成18個月兵役　笑容滿面揮別軍營生活</h1>
+</div>
+
+      <div class="news-content-outer">
+
+        <div class="news-info-outer">
+          <p class="news-content-type">K-Pop</p>
+          <p class="news-date">22/10/2024</p>
+        </div>
+<p>韓國流行音樂超級組合BTS成員鄭號錫今天完成18個月的兵役，成為繼金碩珍之後第二位完成兵役的成員。</p>
+<p>鄭號錫於早上10點左右出現在距離首爾東南約90公里的原州市第36步兵師新兵訓練營大門外，他在那裡服役。舞蹈兼饒舌歌手鄭號錫被看到面帶微笑，擁抱並收到金碩珍贈送的一束鮮花。</p>
+<p>在韓國，所有身體健全的男性都必須在軍隊服役18至21個月。鄭號錫隨後向聚集在那裡的記者敬禮並揮手致意。</p>
+<p>鄭號錫表示，在他服兵役的18個月裡，他擔任教官，行軍很多，所以他看到了很多原州市民。他想感謝那些迎接和為士兵歡呼的市民。</p>
+<p>鄭號錫說：“士兵們一直在努力工作，獻身於國家，為國家做出了很多貢獻。我認為，如果公眾表現出這樣的溫暖興趣和愛，那將更加有意義。謝謝你們的偉大支持、鼓勵和愛。我已經健康地退伍了。”</p>
+<p>完成兵役後，鄭號錫登上一輛黑色小型貨車，唱著一首軍歌的第一句。他繼續通過窗戶向媒體和粉絲們表達感謝，直到車輛駛離。<p>鄭號錫於4月入伍，完成基本訓練後擔任助理教官。金碩珍則於6月退伍後積極參與活動，包括2024年巴黎夏季奧運會的火炬傳遞，並為下個月的個人項目做準備。</p></p>
+<p>預計鄭號錫退伍後也將恢復個人活動，這令粉絲們感到興奮。</p>
+<p>韓國政府已敦促北韓立即從俄羅斯撤軍，並表示將與國際社會合作，解決北韓派兵至俄羅斯的問題。</p>
+<p>韓國政府正在考慮派遣人員至烏克蘭，以監察北韓軍隊的活動。韓國總統尹錫悅與北大西洋公約組織（NATO）秘書長通電話，討論了北韓派兵至俄羅斯的問題。尹錫悅表示，北韓的行為違反了國際法，破壞了地區的安全與穩定。</p>
+<p>韓國外交部召見了俄羅斯駐韓大使，表達了對北韓派兵至俄羅斯的強烈關切。</p>
+<p>在烏克蘭戰場上，俄羅斯和北韓的旗幟被一起展示。</p>
+
+<p>資料來源：Yonhap News Agency</p>
+</div><div class ="news-vid-outer">
+<div class="related-vid-text-outer title-bar ">
+<p class="related-vid-text">相關影片：</p>
+</div>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/DjgsAEwmtio" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+
+<p class="news-text-inner">資料來源： YouTube</p>
+</div>
+
+
+ <div class ="related-news-outer title-bar">
+        <p class="related-news-text">相關新聞：</p>
+      </div>
+     
+      <div class ="related-news-box">
+        
+<p class ="related-news">
+          <i class="bi bi-dot"></i>
+          <a href="https://www.famechos.me/news/從挪威酒吧調酒師到K-pop詞曲作者：Elineelia Myreng的音樂夢想之路.html">從挪威酒吧調酒師到K-pop詞曲作者：Elineelia Myreng的音樂夢想之路</a>
+        </p>
+                
+<p class ="related-news">
+          <i class="bi bi-dot"></i>
+          <a href="https://www.famechos.me/news/SEVENTEEN世界巡迴演唱會「Right Here」首站高陽體育場盛大開幕 5萬8千名粉絲齊聚一堂.html">SEVENTEEN世界巡迴演唱會「Right Here」首站高陽體育場盛大開幕 5萬8千名粉絲齊聚一堂</a>
+        </p>
+                
+<p class ="related-news">
+          <i class="bi bi-dot"></i>
+          <a href="https://www.famechos.me/news/諾貝爾文學獎得主韓江：獲獎後的心路歷程與未來寫作計畫.html">諾貝爾文學獎得主韓江：獲獎後的心路歷程與未來寫作計畫</a>
+        </p>
+                
+      </div>
+
+    </div>
+
+    </main>
+ <footer class="footer">
+    <div class="footer-outer">
+
+
+      <div class="footer-up-outer">
+        <div class="footer-right-name-box">
+          <a href="https://www.famechos.me/"><img class="famechos-logo-footer" src="../img/famechos_logo.png"></a>
+        </div>
+        <div class="footer-right-text-box">
+          <p class="footer-right-text">每日為你提供最新、最全面的日韓資訊。</p>
+        </div>
+        <div class="footer-button-box">
+          <button class="facebook-btn footer-btn">
+            <i class="bi bi-facebook footer-logo"></i>
+          </button>
+          <button class="ig-btn footer-btn">
+            <i class="bi bi-instagram footer-logo"></i>
+          </button>
+          <button class="x-btn footer-btn">
+            <i class="bi bi-twitter-x footer-logo"></i>
+          </button>
+          <button class="x-btn footer-btn">
+            <i class="bi bi-envelope-fill footer-logo"></i>
+          </button>
+        </div>
+      </div>
+
+      <div class="footer-down-outer">
+        <div class="kpop-footer-box footer-box">
+          <a href="https://www.famechos.me/k-pop.html"><p class="footer-text">K-POP</p></a>
+        </div>
+        <div class="jpop-footer-box footer-box">
+          <a href="https://www.famechos.me/j-pop.html"><p class="footer-text">J-POP</p></a>
+        </div>
+        <div class="drama-footer-box footer-box">
+          <a href="https://www.famechos.me/drama.html"><p class="footer-text">影視</p></a>
+        </div>
+        <div class="other-footer-box footer-box">
+          <a href="https://www.famechos.me/others.html"><p class="footer-text">其他</p></a>
+        </div>
+
+
+      </div>
+
+      <div class="copyright-outer">
+        <p class="copyright-text">
+          Copyright © 2024 by <strong>Famechos.me</strong> All Rights Reserved.
+        </p>
+      </div>
+
+     
+    </div>
+
+
+
+  </footer>
+
+<script src="../nav-list.js"></script>
+
+</body>
+</html>
