@@ -362,4 +362,10 @@
     <ns0:changefreq>weekly</ns0:changefreq>
     <ns0:priority>0.90</ns0:priority>
   </ns0:url>
+<ns0:url>
+    <ns0:loc>https://www.famechos.me/news/BTS成員鄭號錫完成18個月兵役　笑容滿面揮別軍營生活.html</ns0:loc>
+    <ns0:lastmod>2024-10-22T15:27:46+08:00</ns0:lastmod>
+    <ns0:changefreq>weekly</ns0:changefreq>
+    <ns0:priority>0.90</ns0:priority>
+  </ns0:url>
 </ns0:urlset>
